--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
@@ -1,37 +1,37 @@
+<mat-toolbar color="primary">
+  <span class="fill-remaining-space">Create employee</span>
+</mat-toolbar>
 
-<div class="main-wrapper" fxLayout="row" fxLayoutAlign="center center">
-  <mat-card class="box">
-    <mat-card-header>
-      <mat-card-title>Register</mat-card-title>
-    </mat-card-header>
 
-    <form class="example-form">
+<div class="container">
+  <form [formGroup]="employeeForm" (ngSubmit)="onSubmit(employeeForm)" class="form">
+    <div class="container" >
+      <mat-form-field class="form-element" >
+        <input matInput placeholder="Name" formControlName="name">
+      </mat-form-field>
 
-      <mat-card-content>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
-        </mat-form-field>
+      <mat-form-field class="form-element">
+        <input matInput placeholder="Email" formControlName="email">
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <input matInput placeholder="Phone" formControlName="phone">
+      </mat-form-field>
+    </div>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Email">
-        </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
-        </mat-form-field>
+    <mat-form-field class="form-element">
+      <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
+                formControlName="address"></textarea>
 
-        <mat-form-field class="example-full-width">
-          <mat-label>Choose designation</mat-label>
-          <mat-select>
-            <mat-option [value]="user" *ngFor="let user of user">{{user}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+    </mat-form-field>
 
-      </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">Register</button>
+    <div class="form-element">
+      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Submit
+        Form
+      </button>
+    </div>
 
-    </form>
-  </mat-card>
+  </form>
 </div>
+
