--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
@@ -1,35 +1,30 @@
-<mat-toolbar color="primary">
-  <span class="fill-remaining-space">Create employee</span>
-</mat-toolbar>
+<div class="container-fluid">
+  <mat-toolbar color="primary">
+    <span class="fill-remaining-space">Create employee</span>
+  </mat-toolbar>
 
-
-<div class="container">
-  <form [formGroup]="employeeForm" (ngSubmit)="onSubmit(employeeForm)" class="form">
-    <div class="container" >
-      <mat-form-field class="form-element" >
+  <form [formGroup]="employeeForm" autocomplete="off" autocapitalize="off" (ngSubmit)="onSubmit(employeeForm)" class="card">
+    <div class="form-group row">
+      <mat-form-field class="form-element col-md-4">
         <input matInput placeholder="Name" formControlName="name">
       </mat-form-field>
 
-      <mat-form-field class="form-element">
+      <mat-form-field class="form-element col-md-4">
         <input matInput placeholder="Email" formControlName="email">
       </mat-form-field>
-      <mat-form-field class="form-element">
+      <mat-form-field class="form-element col-md-4">
         <input matInput placeholder="Phone" formControlName="phone">
       </mat-form-field>
     </div>
-
-
-    <mat-form-field class="form-element">
+    <mat-form-field class="form-element col-md-6">
       <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
                 formControlName="address"></textarea>
-
     </mat-form-field>
 
-
     <div class="form-element">
-      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Submit
-        Form
+      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save
       </button>
+
     </div>
 
   </form>
