employee  service method

--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
@@ -24,8 +24,7 @@
     </mat-form-field>
 
     <div class="form-element">
-      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save
-      </button>
+      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save</button>
 
     </div>
 
