--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
@@ -3,9 +3,9 @@
     <span class="fill-remaining-space">Create employee</span>
   </mat-toolbar>
 
-  <form [formGroup]="employeeForm" autocomplete="off" autocapitalize="off" (ngSubmit)="onSubmit(employeeForm)"
+  <form [formGroup]="employeeForm"  autocomplete="off" autocapitalize="off" (ngSubmit)="onSubmit(employeeForm)"
         class="card">
-    <div class="form-group row">
+    <div class="row col-md-6">
       <mat-form-field class="form-element col-md-4">
         <input matInput placeholder="Name" formControlName="name">
       </mat-form-field>
@@ -22,6 +22,9 @@
       <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
                 formControlName="address"></textarea>
     </mat-form-field>
+
+      <mat-label>{{label}}</mat-label>
+
 
     <div class="form-element">
       <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save</button>
