--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee/employee.component.html
@@ -3,7 +3,7 @@
     <span class="fill-remaining-space">Create employee</span>
   </mat-toolbar>
 
-  <form [formGroup]="employeeForm"  autocomplete="off" autocapitalize="off" (ngSubmit)="onSubmit(employeeForm)"
+  <form [formGroup]="employeeForm" autocomplete="off" autocapitalize="off" (ngSubmit)="onSubmit(employeeForm)"
         class="card">
     <div class="row col-md-6">
       <mat-form-field class="form-element col-md-4">
@@ -18,16 +18,21 @@
         <input matInput placeholder="Phone" formControlName="phone">
       </mat-form-field>
     </div>
+
     <mat-form-field class="form-element col-md-6">
       <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
                 formControlName="address"></textarea>
     </mat-form-field>
 
-      <mat-label>{{label}}</mat-label>
+
+    <div class="mat-form-field-wrapper mat-action-row">
+
+      <div class="mat-button"><button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save
+      </button>
+      </div>
 
 
-    <div class="form-element">
-      <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!employeeForm.valid">Save</button>
+      <mat-label [class]="label.length==8?'bg-danger':'alert-success'">{{label}}</mat-label>
 
     </div>
 
