--- a/src/Assignment.FrontEnd/src/app/employee/employee/components/employee-list/employee-list.component.scss
+++ b/src/Assignment.FrontEnd/src/app/employee/employee/components/employee-list/employee-list.component.scss
@@ -16,5 +16,26 @@ table {
   overflow: auto;
   max-height: 500px;
 }
+::ng-deep{
+  Button {
+    border-radius:28px;
+
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+  }
+Button:hover {
+    background-color:#5cbf2a;
+  }
+Button:active {
+    position:relative;
+    top:1px;
+  }
+}
 
 
